Task #1: Fix for number of to-do list items remaining not being visible

--- a/src/Web/ClientApp/src/app/todo/todo.component.scss
+++ b/src/Web/ClientApp/src/app/todo/todo.component.scss
@@ -33,6 +33,14 @@
   padding-top: 4px;
 }
 
+.badge.badge-light {
+  color: black;
+}
+
+.badge.badge-light.active {
+  color: white;
+}
+
 .modal-footer {
   display: block;
 }
